<resources>
    <string name="app_name">Sayur.in</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>tring>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">App Label</string>
    <string name="search_hint">Search Hint</string>

</resources>
