<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:icon="@drawable/ic_search2"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/cart"
        android:icon="@drawable/ic_shopping2"
        android:title="@string/action_cart"
        app:showAsAction="always"/>


    <item android:id="@+id/about"
        android:title="@string/action_about"
        app:showAsAction="never" />


    <item android:id="@+id/exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>